# hashmir

./: LICENSE  Makefile  README.md  hashmir.cabal  package.yaml  stack.yaml
app/: Main.hs
resources/: schema.sql
src/Hashmir/: Data.hs
test/: SpecHelper.hs
test/Hashmir/: DataSpec.hs
